Minor converter improvement; Refactor test